# Logs_management_app_Cpp

./: CMakeLists.txt  Gestion_logs.cpp  README.md
Doc/: Documentation_fonction.h  English_Doc.h
Logs/: log.cpp  log.h
Menu/: Menu.cpp  Menu.h
